Fix Integration test ChannelRepositorySearchIT